--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "fs": "^0.0.1-security",
     "https": "^1.0.0",
     "jsencrypt": "^3.3.2",
-    "multer": "^1.4.5-lts.2",
+    "multer": "^2.0.1",
     "node-rsa": "^1.1.1",
     "socket.io": "^4.8.1"
   }
