--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
     "https": "^1.0.0",
     "jsencrypt": "^3.5.4",
     "multer": "^2.0.2",
